# smart-rag-starter

./: .gitignore  README.md  pyproject.toml  test2.txt
.github/workflows/: ci.yml
smart_rag/: __init__.py  chunker.py  document.py
src/smart_rag/: __init__.py  chunker.py  cli.py  loader.py  prompt.py  retriever.py
tests/: test_chunker.py  test_cli.py  test_prompt.py  test_retriever.py
