[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-rag-starter"
version = "0.1.0"
description = "A small, dependency-light Retrieval Augmented Generation starter kit in Python: load, chunk, retrieve, prompt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mukunda Katta" },
]
keywords = ["rag", "retrieval", "bm25", "llm", "prompt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
srag = "smart_rag.cli:main"

[project.urls]
Homepage = "https://github.com/MukundaKatta/smart-rag-starter"
Issues = "https://github.com/MukundaKatta/smart-rag-starter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
